iOS icon and startup placeholder images added

--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
 
 	<title>Game Land</title>
 
+	<!-- Style Sheets -->
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/fontfaces.css">
 	<link rel="stylesheet" href="styles/mobile.css" media="screen and (max-device-width: 768px) and (orientation: portrait), screen and (max-device-width: 1024px) and (orientation: landscape)">
 
+	<!-- iOS home screen icons -->
+	<link rel="apple-touch-icon-precomposed" href="images/ios-icon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ios-icon-ipad.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ios-icon-iphone4.png">
+
+	<!-- iOS startup images -->
+	<link rel="apple-touch-startup-image" href="images/ios-startup-748x1024.png" media="screen and (min-device-width: 768px) and (orientation:landscape)">
+	<link rel="apple-touch-startup-image" href="images/ios-startup-768x1004.png" media="screen and (min-device-width: 768px) and (orientation:portrait)">
+	<link rel="apple-touch-startup-image" href="images/ios-startup-320x460.png" media="screen and (max-device-width: 320px)">
+
+	<!-- iOS status bar style -->
+	<!-- Note to self: check if it can be removed completely -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+	<!-- Scripts -->
+	<!-- Note to self: Test speed when loading at end of document -->
 	<script src="scripts/modernizr.js"></script>
 	<script src="scripts/loader.js"></script>
 </head>
