--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
 	<title>Game Land</title>
+	<meta name="description" content="pre-alpha version of upcomming game Game Land">
 
 	<!-- Style Sheets -->
  	<link rel="stylesheet" href="styles/main.css">
